--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pjmagyani.internalexternalstorage.SecondActivity">
+    tools:context="com.example.abuguina.buguinaexternalstorage.Main2Activity">
 
     <Button
         android:id="@+id/btnSP"
@@ -48,7 +48,7 @@
         android:onClick="saveExternalStorage"/>
 
     <Button
-        android:id="@+id/btnEP"
+        android:id="@+id/btnEPS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="External Public Storage"
